UPdate UI and flow

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,7 +12,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.css"
         rel="stylesheet">
     <link rel="stylesheet" href="/static/css/account-information/layout-account.css">
-        <link rel="stylesheet" href="/static/css/auth/login-register.css">
+    <link rel="stylesheet" href="/static/css/auth/login-register.css">
     <link rel="stylesheet" href="/static/css/auth/forgot-password.css">
     <link href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-fileinput@5.5.0/css/fileinput.min.css" media="all"
         rel="stylesheet" type="text/css" />
@@ -23,7 +23,9 @@
 
 <body style="background-color: #E6E9F1">
     <div class="bg-danger d-flex justify-content-center align-items-center " style="height: 50px">
-        <h3 class="font-weight-bold text-white ">WebSite Name</h3>
+        <a href="/" style="text-decoration: none">
+            <h3 class="font-weight-bold text-white ">Tuổi Già</h3>
+        </a>
     </div>
 
     {{{body}}}
@@ -36,19 +38,19 @@
         </div>
         <div class="row mt-3 pb-3" style="border-bottom: 1px solid  #EEEEEE">
             <div class="col-5 flex-column justify-content-between">
-                <div>Tổng biên tập: Lê Thế Chữ</div>
-                <div>Giấy phép hoạt động báo điện tử tiếng Việt, tiếng Anh Số 561/GP-BTTTT, cấp ngày 25-11-2022.</div>
-                <div>Thông tin tòa soạn - Thành Đoàn TP.HCM</div>
+                <div>Tổng biên tập: T.T. Biện Xuân Huy</div>
+                <div>Giấy phép hoạt động báo điện tử tiếng Việt, tiếng Anh Số 561/GP-BTTTT, cấp ngày 25-11-2022
+                </div>
+                <div>Thông tin tòa soạn - FIE_K22 HCMUTE</div>
             </div>
-
             <div class="col-5 d-flex flex-column justify-content-between">
                 <div>
-                    Địa chỉ: 60A Hoàng Văn Thụ, P.9, Q.Phú Nhuận, Tp. Hồ Chí Minh
+                    Địa chỉ: Số 1 Võ Văn Ngân, TP. Thủ Đức, Tp. Hồ Chí Minh
                 </div>
                 <div>
-                    Hotline: 0918.033.133 - Email: tto@tuoitre.com.vn
+                    Hotline: 0908.338.918 - Email: 22110031@student.hcmute.edu.vn
                 </div>
-                <div>Phòng Quảng Cáo Báo Tuổi Trẻ: 028.39974848</div>
+                <div>Phòng Quảng Cáo Báo Tuổi Già: 0908.338.918</div>
             </div>
             <div class="col-2 footer__contact-link d-flex flex-column justify-content-between">
                 <div>
@@ -65,18 +67,17 @@
         </div>
         <div class="d-flex justify-content-between py-3">
             <div>
-                © Copyright 2023 TuoiTre Online, All rights reserved ® Tuổi Trẻ Online giữ bản quyền nội dung trên
-                website
-                này
+                © Copyright 2024 TuoiGia Online, All rights reserved ® Tuổi Già Online giữ bản quyền nội dung trên
+                website này
             </div>
             <div>
-                <a>
+                <a href="https://youtu.be/xvFZjo5PgG0?si=v_lXYe0q33sw9RkO" target="_blank">
                     <img src="/static/images/others/social.png" />
                 </a>
-                <a>
+                <a href="https://youtu.be/xvFZjo5PgG0?si=v_lXYe0q33sw9RkO" target="_blank">
                     <img src="/static/images/others/facebook.png" style="width: 26px;height: 26px;margin-left: -2px" />
                 </a>
-                <a>
+                <a href="https://youtu.be/xvFZjo5PgG0?si=v_lXYe0q33sw9RkO" target="_blank">
                     <img src="/static/images/others/instagram.png" style="width: 26px;height: 26px" />
                 </a>
             </div>
@@ -110,7 +111,7 @@
     {{!-- file Input --}}
     <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-fileinput@5.5.0/js/fileinput.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.5.4/js/locales/vi.min.js"></script>
-    
+
     {{{_sections.js}}}
 
 </body>
