--- a/views/vwAccount/premium.hbs
+++ b/views/vwAccount/premium.hbs
@@ -68,7 +68,7 @@
         <div style="color: #ED1C24" class="font-weight-bold mr-3 mt-3">Đừng lo lắng,
             chỉ tốn một ít thời gian để chúng
             tôi có thể duyệt đơn yêu cầu của bạn. Trong lúc chờ đợi cùng xem những tin tức
-            <a href="#" style="text-decoration: underline">mới
+            <a href="/" style="text-decoration: underline">mới
                 nhất</a> nào!
         </div>
         {{/if}}
