--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -38,14 +38,10 @@
                     <i class="fas fa-user-circle fa-lg fa-fw" style="color: #fdfdfd;"></i>
                 </a>
 
-                <a href="#" class="btn btn-primary" style="outline: none; box-shadow: none;">
+                <a href="/account/premium" class="btn btn-primary" style="outline: none; box-shadow: none;">
                     Đăng ký Tuổi Già Sao
                 </a>
 
-                <a href="#" class="btn btn-primary"
-                    style="background-color: transparent; border: transparent; outline: none; box-shadow: none; margin-left: 10px;">
-                    <i class="far fa-question-circle fa-lg fa-fw"></i>
-                </a>
             </div>
         </div>
     </nav>
@@ -134,14 +130,14 @@
                 website này
             </div>
             <div>
-                <a>
-                    <img src="/others/social.png" />
+                <a href="https://youtu.be/xvFZjo5PgG0?si=v_lXYe0q33sw9RkO" target="_blank">
+                    <img src="/static/images/others/social.png" />
                 </a>
-                <a>
-                    <img src="/others/facebook.png" style="width: 26px; height: 26px; margin-left: -2px" />
+                <a href="https://youtu.be/xvFZjo5PgG0?si=v_lXYe0q33sw9RkO" target="_blank">
+                    <img src="/static/images/others/facebook.png" style="width: 26px;height: 26px;margin-left: -2px" />
                 </a>
-                <a>
-                    <img src="/others/instagram.png" style="width: 26px; height: 26px" />
+                <a href="https://youtu.be/xvFZjo5PgG0?si=v_lXYe0q33sw9RkO" target="_blank">
+                    <img src="/static/images/others/instagram.png" style="width: 26px;height: 26px" />
                 </a>
             </div>
         </div>
