adjust UI for vwHome/article.hbs

--- a/views/vwHome/article.hbs
+++ b/views/vwHome/article.hbs
@@ -1,5 +1,5 @@
 <div class="container-fluid mt-3" style="width: 730px;">
-    <div class="card" style="border: none;">
+    <div class="card" style="border-radius: 10px; border: none;">
         <div class="card-body">
             <div class="list-group list-group-flush">
                 <div class="list-group-item" style="border: none;">
@@ -73,7 +73,7 @@
                     <form action="" method="" style="display: flex; flex-direction: column; align-items: center; gap: 10px;">
                         <textarea id="" name="comments" placeholder="Để lại bình luận của bạn..." style="display: block; margin: 0 auto; width: 620px; height: 100px; resize: none;"></textarea>
 
-                        <button type="submit" style="align-self: flex-end; background-color: red; color: white; border-radius: 5px; border: none; padding: 5px 15px;"><i class="fas fa-paper-plane fa-sm fa-fw"></i>Gửi bình luận</button>
+                        <button type="submit" style="align-self: flex-end; background-color: red; color: white; border-radius: 5px; border: none; padding: 5px 15px;"><i class="fas fa-paper-plane fa-sm fa-fw" style="margin-right: 5px;"></i>Gửi bình luận</button>
                     </form>
                 </div>
 
