--- a/views/vwHome/article.hbs
+++ b/views/vwHome/article.hbs
@@ -138,7 +138,7 @@
                     <h5 style="font-weight: bolder; margin-left: 10px; margin-bottom: 0;">Tin cùng chuyên mục</h5>
                 </div>
 
-                <div id="carouselId" class="carousel slide" data-ride="carousel" data-interval="3000">
+                <div id="carouselIdsamecate" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <a href="#" class="list-group-item list-group-item-action d-flex"
@@ -172,9 +172,9 @@
                             </a>
                         </div>
 
-                        <button class="carousel-control-next" type="button" data-target="#carouselId" data-slide="next">
+                        <button class="carousel-control-next" type="button" data-target="#carouselIdsamecate" data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"
-                                style="background-color: black; border-radius: 50%; width: 30px; height: 30px;"></span>
+                                style="background-color: grey; border-radius: 50%; width: 30px; height: 30px;"></span>
                             <span class="sr-only">Next</span>
                         </button>
                     </div>
