adjust small UI features

--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -39,7 +39,7 @@
                 </a>
 
                 <a href="/account/premium" class="btn btn-primary" style="outline: none; box-shadow: none;">
-                    Đăng ký Tuổi Già Sao
+                    Đăng ký Tuổi Già VIP
                 </a>
 
             </div>
