--- a/static/css/admin/admin-categories.css
+++ b/static/css/admin/admin-categories.css
@@ -31,6 +31,9 @@
     background-color: #A5A5A5;
     color: #333333;
     text-decoration: none;
+    font-weight: bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .scrollable-content {
     overflow-y: auto;
