Change name in admin/dashboard

--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -18,7 +18,7 @@
         <div class="border-bottom p-4">
             <div class="d-flex align-items-center ">
                 <img src="/others/newspaper (2).png" width="32px" height="32px">
-                <div class="ml-2 font-weight-bolder" style="color: #344767">Tuổi Trẻ Admin</div>
+                <div class="ml-2 font-weight-bolder" style="color: #344767">Bố Già</div>
             </div>
         </div>
         <div class="mt-3 px-2 ">
