Chỉnh mấy button menu bấm cho đúng

--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -32,7 +32,7 @@
         <div class="mt-2 px-2">
             <a href="/admin/articles">
                 <div class="dash-board__section {{#if articles}}active{{/if}}  d-flex align-items-center"
-                     href="/admin/categories">
+                     href="/admin/articles">
                     <img src="/others/news-report.png" class="mr-2" width="25px" height="25px">
                     <div class="w-100 ">Quản lý bài viết</div>
                 </div>
