--- a/views/vwAdmin/categories/categories-menu.hbs
+++ b/views/vwAdmin/categories/categories-menu.hbs
@@ -26,10 +26,13 @@
         </a>
     </div>
     <div class="border-bottom mt-3 ">
-        <div class="row text-white rounded " style="padding: 0.5rem;background-color: #EF314C">
-            <h4 class="col-3 d-flex justify-content-center"><span>Tên chuyên mục</span>
+        <div class="row text-white rounded d-flex py-2 align-items-center" style="padding: 0.5rem;background-color: #EF314C">
+            <h4 class="col-3 d-flex mb-0 justify-content-center ">
+                <span>Tên chuyên mục</span>
             </h4>
-            <h4 class="col-6 d-flex justify-content-center"><span class="ml-4">Chuyên mục con</span></h4>
+            <h4 class="col-6 d-flex mb-0 justify-content-center ">
+                <span class="ml-4">Chuyên mục con</span>
+            </h4>
             <div class="col-3 ">
             </div>
         </div>
@@ -42,7 +45,7 @@
                 <div class="col-6 overflow-x-hidden category-section__child-category">
                     {{#if this.childCats}}
                         {{#each childCats}}
-                            <a href="/admin/categories/edit?catId={{id}}"  class="m-1">{{name}}</a>
+                            <a href="/admin/categories/edit?catId={{id}}" class="m-1">{{name}}</a>
                         {{/each}}
                     {{else}}
                         Không có gì hết :3.
