--- a/static/css/admin/admin-tags.css
+++ b/static/css/admin/admin-tags.css
@@ -13,7 +13,7 @@
 
 .tag-name {
     display: block;
-    max-width: 150px;
+    /*max-width: 180px;*/
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
