--- a/views/vwHome/article.hbs
+++ b/views/vwHome/article.hbs
@@ -1,184 +1,195 @@
-<div class="container-fluid mt-3" style="width: 730px;">
+{{#section 'css'}}
+<style>
+    .breadcrumb-item+.breadcrumb-item::before {
+        content: "|";
+        /* Thay đổi dấu phân cách */
+    }
+
+    .category-link {
+        text-decoration: none;
+        color: #6C757D;
+    }
+
+    .category-link:hover {
+        text-decoration: none;
+        color: red;
+    }
+
+    .tag-link:hover {
+        cursor: pointer;
+    }
+
+    .next-button {
+        margin-right: 20px;
+        border-radius: 5px;
+        background: radial-gradient(circle, red, lightgray);
+    }
+
+    .relevant-title {
+        color: #6C757D;
+    }
+
+    .relevant-title:hover {
+        color: #000000;
+        text-decoration: none;
+    }
+</style>
+{{/section}}
+
+<div class="container-fluid mt-4 mb-5" style="width: 730px;">
     <div class="card" style="border-radius: 10px; border: none;">
         <div class="card-body">
             <div class="list-group list-group-flush">
-                <div class="list-group-item" style="border: none;">
-                    <h4><a href="#" class="badge badge-light" style="font-weight: 500;">Chuyên mục con</a></h4>
+                <div class="list-group-item" style='border: none;'>
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                            {{#each this.article.categories}}
+                            <li class="breadcrumb-item active">
+                                <a href="/cat?catId={{id}}" class="category-link">
+                                    {{name}}
+                                </a>
+                            </li>
+                            {{/each}}
 
+                        </ol>
+                    </nav>
                     <ul
-                        style="list-style: none; display: flex; align-items: center; padding: 0; margin: 0; margin-top: 5px;">
+                        style="list-style: none; display: flex; align-items: center; padding: 0 0 0 10px; margin: 0; margin-top: 5px;">
                         <i class="fas fa-tags fa-sm fa-fw" style="margin-right: 5px; margin-top: 5px;"></i>
-
+                        {{#each this.article.tags}}
                         <li>
-                            <a href="#" class="badge badge-pill badge-light" style="font-weight: 400;">Tag</a>
+                            <a href="/tag?tagId={{id}}" class="badge badge-pill badge-light tag-link"
+                                style="font-weight: 400;">
+                                {{name}}
+                            </a>
                         </li>
-
-                        <li>
-                            <a href="#" class="badge badge-pill badge-light" style="font-weight: 400;">Tag</a>
-                        </li>
-
-                        <li>
-                            <a href="#" class="badge badge-pill badge-light" style="font-weight: 400;">Tag</a>
-                        </li>
+                        {{/each}}
                     </ul>
 
-                    <h3 class="card-title" style="font-weight: bolder; margin: 0; margin-top: 15px;">Tiêu đề Tiêu đề
-                        Tiêu đề Tiêu đề Tiêu đề Tiêu đề Tiêu đề Tiêu đề Tiêu đề Tiêu đề Tiêu đề</h3>
+                    <h3 class="card-title" style="font-weight: bolder; margin: 0; margin-top: 15px;">
+                        {{this.article.title}}
+                    </h3>
                 </div>
 
                 <div class="list-group-item d-flex align-items-center justify-content-between">
-                    <p style="margin: 0;">Tác giả: Tên nhà báo</p>
+                    <p style="margin: 0;">
+                        <i class="bi bi-vector-pen"></i>
+                        {{this.article.writer_pseudonym}}
+                    </p>
 
-                    <small>Ngày đăng</small>
+                    <small>
+                        Đăng ngày:
+                        {{formatSimpleDatetime this.article.publish_date}}
+                    </small>
+                </div>
+
+                <div class="list-group-item font-weight-bold py-2" style="border: none;">
+                    {{this.article.abstract}}
                 </div>
 
                 <div class="list-group-item">
                     <div class="d-flex justify-content-center">
-                        <img src="/others/test.webp" class="d-block w-100 h-100" alt="Photo">
-                    </div>
-
-                    <div>
-                        <small style="font-weight: lighter;">Mô tả ảnh</small>
-                    </div>
-                </div>
-
-                <div class="list-group-item" style="border-bottom: solid 2px black;">
-                    <div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo illum rerum praesentium
-                            culpa autem natus temporibus obcaecati accusamus ut, ex, alias ab. Optio earum harum
-                            autem dicta delectus dolorum animi.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo illum rerum
-                            praesentium culpa autem natus temporibus obcaecati accusamus ut, ex, alias ab. Optio
-                            earum harum autem dicta delectus dolorum animi.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo illum rerum
-                            praesentium culpa autem natus temporibus obcaecati accusamus ut, ex, alias ab. Optio
-                            earum harum autem dicta delectus dolorum animi.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo illum rerum
-                            praesentium culpa autem natus temporibus obcaecati accusamus ut, ex, alias ab. Optio
-                            earum harum autem dicta delectus dolorum animi.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo illum rerum
-                            praesentium culpa autem natus temporibus obcaecati accusamus ut, ex, alias ab. Optio
-                            earum harum autem dicta delectus dolorum animi.
-                        </p>
+                        <img src="{{this.article.main_thumb}}" class="d-block w-100 h-100" alt="Photo">
                     </div>
                 </div>
 
                 <div class="list-group-item">
-                    <div class="list-group-item d-flex align-items-center" style="border: none;">
-                        <i class="fas fa-comments fa-lg fa-fw" style="color: rgb(103, 103, 232);"></i>
+                    {{{this.article.content}}}
+                </div>
 
-                        <h5 style="font-weight: bolder; margin-left: 10px; margin-bottom: 0;">Bình luận</h5>
+                <div class="list-group-item" style="border: none;">
+                    <div class="list-group-item d-flex align-items-center" style="border: none;">
+                        <i class="fas fa-comments fa-lg fa-fw text-danger"></i>
+                        <h5 class="text-danger" style="font-weight: bolder; margin-left: 10px; margin-bottom: 0;">
+                            Bình luận ({{this.commentCount}})
+                        </h5>
                     </div>
 
-                    <form action="" method="" style="display: flex; flex-direction: column; align-items: center; gap: 10px;">
-                        <textarea id="" name="comments" placeholder="Để lại bình luận của bạn..." style="display: block; margin: 0 auto; width: 620px; height: 100px; resize: none;"></textarea>
+                    <form action="/newComment?articleId={{this.article.id}}" method="post"
+                        style="display: flex; flex-direction: column; align-items: center; gap: 10px;">
+                        <textarea id="" name="comment" placeholder="Hãy chia sẻ cảm nghĩa của bản thân..."
+                            style="display: block; margin: 0 auto; width: 620px; height: 100px; resize: none; padding: 12px 30px 12px 12px"></textarea>
 
-                        <button type="submit" style="align-self: flex-end; background-color: red; color: white; border-radius: 5px; border: none; padding: 5px 15px;"><i class="fas fa-paper-plane fa-sm fa-fw" style="margin-right: 5px;"></i>Gửi bình luận</button>
+                        <button type="submit"
+                            style="align-self: flex-end; background-color: red; color: white; border-radius: 5px; border: none; padding: 5px 15px;">
+                            <i class="fas fa-paper-plane fa-sm fa-fw" style="margin-right: 5px;"></i>
+                            Gửi bình luận
+                        </button>
                     </form>
                 </div>
 
-                <div class="list-group-item">
+                <div class="list-group-item mt-2" style="border-bottom: 1px solid #DFDFDF">
                     <ul style="list-style: none; padding: 0; margin: 0;">
 
-                        <li style="border-bottom: 1px solid #ddd; padding-bottom: 10px; margin-bottom: 10px;">
-                            <div class="d-flex align-items-center justify-content-between">
-                                <p style="margin: 0; font-weight: bolder;">Tên người dùng</p>
+                        {{#each this.comments}}
+                        <li class="pt-2 pb-4 px-4"
+                            style="background-color: #F0F0F0; border-radius:10px;  margin-bottom: 15px;">
+                            <div class="d-flex align-items-center justify-content-between mb-2" style="border-bottom: 1px solid lightgray">
+                                <p style="margin: 0; font-weight: bolder;">{{user}}</p>
 
-                                <small style="font-weight: lighter">Ngày bình luận</small>
+                                <small style="font-weight: lighter">{{formatSimpleDatetime date}}</small>
                             </div>
 
-                            <div>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing
-                                    elit. Eligendi similique, velit cum labore accusantium ipsa expedita
-                                    molestiae laudantium quo unde alias, distinctio quas obcaecati asperiores
-                                    mollitia, beatae et aut laboriosam.</p>
-                            </div>
-                        </li>
-
-                        <li style="border-bottom: 1px solid #ddd; padding-bottom: 10px; margin-bottom: 10px;">
-                            <div class="d-flex align-items-center justify-content-between">
-                                <p style="margin: 0; font-weight: bolder;">Tên người dùng</p>
-
-                                <small style="font-weight: lighter">Ngày bình luận</small>
-                            </div>
-
-                            <div>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing
-                                    elit. Fuga ab laboriosam architecto exercitationem aliquam at quia, laborum
-                                    sunt reiciendis ducimus modi consectetur, accusantium deleniti voluptate
-                                    suscipit voluptates magnam aut asperiores.</p>
+                            <div style="padding-right: 20px;">
+                                <p style="margin-bottom: 0px">
+                                    {{content}}
+                                </p>
                             </div>
                         </li>
+                        {{/each}}
 
-                        <li style="border-bottom: 1px solid #ddd; padding-bottom: 10px; margin-bottom: 10px;">
-                            <div class="d-flex align-items-center justify-content-between">
-                                <p style="margin: 0; font-weight: bolder;">Tên người dùng</p>
-
-                                <small style="font-weight: lighter">Ngày bình luận</small>
-                            </div>
-
-                            <div>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing
-                                    elit. Quibusdam, maiores! Molestias repellat molestiae repudiandae veritatis
-                                    quo beatae eius laborum, sit iste ipsum nam blanditiis laudantium, commodi
-                                    facilis error? Tempora, ducimus.</p>
-                            </div>
-                        </li>
                     </ul>
                 </div>
             </div>
         </div>
 
-        <div class="card-body">
+        <div class="card-body pt-0 pb-4">
             <div class="list-group list-group-flush">
-                <div class="list-group-item d-flex align-items-center"
-                    style="border-top: solid 2px black; border-bottom: none">
+                <div class="list-group-item d-flex align-items-center" style="border-bottom: none">
                     <i class="fas fa-newspaper fa-lg fa-fw" style="color: red;"></i>
-
-                    <h5 style="font-weight: bolder; margin-left: 10px; margin-bottom: 0;">Tin cùng chuyên mục</h5>
+                    <h5 class="text-danger" style="font-weight: bolder; margin-left: 10px; margin-bottom: 0;">
+                        Tin cùng chuyên mục
+                    </h5>
                 </div>
 
+                {{#if this.noRelevantArticles}}
+                <div class="text-center py-5 text-secondary">
+                    Hiện tại không có bài viết khác cùng chuyên mục.
+                </div>
+                {{else}}
+
+                {{#each this.relevantArticles}}
                 <div id="carouselIdsamecate" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <a href="#" class="list-group-item list-group-item-action d-flex"
-                                style="background-color: transparent; text-decoration: none; border: none;">
-                                <img src="/others/test.webp" alt="Photo"
-                                    style="object-fit: cover; width: 250px; height: 170px">
-
-                                <div class="d-flex w-100 flex-column justify-content-between" style="margin-left: 5px;">
-                                    <small>Chuyên mục</small>
-
-                                    <h5 class="mb-1">Tiêu đề Tiêu đề Tiêu đề</h5>
-
-                                    <small>Ngày đăng</small>
+                            <div href="#" class="list-group-item list-group-item-action d-flex"
+                                style="background-color: transparent; text-decoration: none; border: none; width: 560px; padding-right:0px">
+                                <a href="/article?id={{id}}">
+                                    <img src="{{main_thumb}}" alt="Photo"
+                                        style="object-fit: cover; width: 250px; height: 170px; border-radius: 10px">
+                                </a>
+                                <div class="d-flex w-100 flex-column justify-content-between"
+                                    style="margin-left: 10px;">
+                                    <a href="/article?id={{id}}" class="relevant-title">
+                                        <h5 class="mb-1">
+                                            {{title}}
+                                        </h5>
+                                    </a>
+                                    <small>{{formatSimpleDatetime publish_date}}</small>
                                 </div>
-                            </a>
+                            </div>
                         </div>
 
-                        <div class="carousel-item">
-                            <a href="#" class="list-group-item list-group-item-action d-flex"
-                                style="background-color: transparent; text-decoration: none; border: none;">
-                                <img src="/others/test.webp" alt="Photo"
-                                    style="object-fit: cover; width: 250px; height: 170px">
-
-                                <div class="d-flex w-100 flex-column justify-content-between" style="margin-left: 5px;">
-                                    <small>Chuyên mục</small>
-
-                                    <h5 class="mb-1">Tiêu đề Tiêu đề Tiêu đề 2</h5>
-
-                                    <small>Ngày đăng</small>
-                                </div>
-                            </a>
-                        </div>
-
-                        <button class="carousel-control-next" type="button" data-target="#carouselIdsamecate" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"
-                                style="background-color: grey; border-radius: 50%; width: 30px; height: 30px;"></span>
-                            <span class="sr-only">Next</span>
+                        <button class="carousel-control-next" type="button" data-target="#carouselIdsamecate"
+                            data-slide="next">
+                            <i class="bi bi-arrow-right-square-fill text-danger" style="font-size: 30px;"></i>
                         </button>
                     </div>
                 </div>
+                {{/each}}
+
+                {{/if}}
+
             </div>
         </div>
     </div>
