--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tuổi Già</title>
+    <title>{{title}}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -18,9 +18,10 @@
     <nav class="navbar navbar-expand-lg navbar-light"
         style="background: linear-gradient(90.13deg, #e30e16 18.76%, #c90009 96.9%);">
         <div style="width: 1320px; margin: 0 auto; display: flex; align-items: center; justify-content: space-between;">
-            <div>
-                Tuổi Già ♥
-            </div>
+            <a href="/">
+                <img src="/static/images/others/logo.png" alt="" style="width: 95px">
+            </a>
+
 
             <div style="display: flex; align-items: center; margin-left: auto;">
                 <form class="form-inline d-flex align-items-center" id="searchForm" method="get" action="/search"
@@ -29,24 +30,67 @@
                         <button class="fa fa-search border-0 bg-transparent mr-2 pl-0" aria-hidden="true" type="submit"
                             style="position: absolute; left: 10px; top: 50%; transform: translateY(-50%); color: #888;"></button>
                         <input class="form-control" type="search" placeholder="Nhập nội dung cần tìm" id="searchInput"
-                            aria-label="Search" style="padding-left: 30px; width: 250px; outline: none;">
+                            aria-label="Search" required style="padding-left: 30px; width: 250px; outline: none;">
                     </div>
                 </form>
 
-                <a href="/account" class="btn btn-primary"
-                    style="background-color: transparent; border: transparent; outline: none; box-shadow: none; margin-right: 10px;">
-                    <i class="fas fa-user-circle fa-lg fa-fw" style="color: #fdfdfd;"></i>
-                </a>
+                {{#if this.isAuth}}
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link p-0" href="#" role="button" data-toggle="dropdown" aria-expanded="false"
+                            style="margin-right: 15px;">
+                            <i class="bi bi-person-fill-gear" style="color: #FFFFFF; font-size: 25px"></i>
+                        </a>
+                        <div class="dropdown-menu" style="z-index: 10000;">
+                            <a class="dropdown-item " href="/account">
+                                <i class="bi bi-gear-fill mr-1"></i>
+                                Tài khoản
+                            </a>
+                            {{#if isWriter}}
+                            <a class="dropdown-item" href="/writer">
+                                <i class="bi bi-pencil-fill mr-1"></i>
+                                Phóng viên
+                            </a>
+                            {{/if}}
+                            {{#if isEditor}}
+                            <a class="dropdown-item" href="/editor">
+                                <i class="bi bi-pencil-fill mr-1"></i>
+                                Duyệt bài
+                            </a>
+                            {{/if}}
+                            {{#if isAdmin}}
+                            <a class="dropdown-item" href="/admin">
+                                <i class="bi bi-pencil-fill mr-1"></i>
+                                Quản trị
+                            </a>
+                            {{/if}}
 
-                <a href="/account/premium" class="btn btn-primary" style="outline: none; box-shadow: none;">
-                    Đăng ký Tuổi Già VIP
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/account/logout">
+                                <i class="bi bi-reply-fill mr-1"></i>
+                                Đăng xuất
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+                {{else}}
+                <a href="/login-register" class="text-center"
+                    style="background-color: transparent; border: transparent; outline: none; box-shadow: none; margin-right: 15px;">
+                    <i class="bi bi-box-arrow-in-right" style="color: #FFFFFF; font-size: 25px;"></i>
+                </a>
+                {{/if}}
+
+                <a href="/account/premium" class="btn btn-warning d-flex align-items-center pl-3"
+                    style="box-shadow: none;">
+                    <b>Đăng ký Tuổi Già Pro &nbsp; </b>
+                    <img src="/static/images/others/grandfather.png" alt="" style="width: 20px;">
                 </a>
 
             </div>
         </div>
     </nav>
 
-    <nav class="navbar navbar-expand navbar-light bg-light sticky-top" style="background-color: #f8f9fa;">
+    <nav class="navbar navbar-expand navbar-light bg-light sticky-top py-1" style="background-color: #f8f9fa;">
         <div style="width: 1340px; margin: 0 auto; display: flex; align-items: center;">
             <ul class="nav navbar-nav d-flex align-items-center"
                 style="display: flex; padding: 0; margin: 0; list-style: none;">
@@ -56,33 +100,23 @@
                     </a>
                 </li>
 
+                {{#each this.categoryTree}}
                 <li class="nav-item active" style="margin-right: 15px;">
                     <div class="dropdown">
-                        <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button"
+                        <a class="btn btn-secondary btn-sm dropdown-toggle" href="/cat?catId={{id}}" role="button"
                             data-toggle="dropdown" aria-expanded="false"
                             style="color: black; background-color: transparent; border: transparent; outline: none; box-shadow: none;">
-                            Chuyên mục
+                            {{name}}
                         </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Chuyên mục con</a>
-                            <a class="dropdown-item" href="#">Chuyên mục con</a>
+                            {{#each children}}
+                            <a class="dropdown-item" href="/cat?catId={{id}}">{{name}}</a>
+                            {{/each}}
                         </div>
                     </div>
                 </li>
+                {{/each}}
 
-                <li class="nav-item active" style="margin-right: 15px;">
-                    <div class="dropdown">
-                        <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button"
-                            data-toggle="dropdown" aria-expanded="false"
-                            style="color: black; background-color: transparent; border: transparent; outline: none; box-shadow: none;">
-                            Chuyên mục
-                        </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Chuyên mục con</a>
-                            <a class="dropdown-item" href="#">Chuyên mục con</a>
-                        </div>
-                    </div>
-                </li>
             </ul>
         </div>
     </nav>
