Add vip-users router

--- a/views/vwAdmin/dashboard.hbs
+++ b/views/vwAdmin/dashboard.hbs
@@ -36,7 +36,7 @@
                 options: {
                     scales: {
                         x: {
-                            grid: { display: false }, // Loại bỏ grid dọc
+                            grid: {display: false}, // Loại bỏ grid dọc
                             beginAtZero: true // Bắt đầu từ 0 nếu cần
                         },
                         y: {
@@ -69,7 +69,7 @@
         <div class="dash-board__brief-info__square-info">
             <div>
                 <h5>
-                    MONTH'S TOTAL VIEW
+                    MONTH'S VIEW
                 </h5>
                 <div class="dash-board__brief-info__square-info__detail-number ">
                     <h4>120,000</h4>
@@ -81,7 +81,7 @@
         <div class="dash-board__brief-info__square-info">
             <div>
                 <h5>
-                    MONTH'S TOTAL ARTICLES
+                    MONTH'S ARTICLES
                 </h5>
                 <div class="dash-board__brief-info__square-info__detail-number ">
                     <h4>120,000</h4>
@@ -93,7 +93,7 @@
         <div class="dash-board__brief-info__square-info">
             <div>
                 <h5>
-                    TOTAL PREMIUM USERS
+                    PREMIUM USERS
                 </h5>
                 <div class="dash-board__brief-info__square-info__detail-number ">
                     <h4>120,000</h4>
@@ -105,7 +105,7 @@
         <div class="dash-board__brief-info__square-info">
             <div>
                 <h5>
-                    TOTAL USER
+                    USERS
                 </h5>
                 <div class="dash-board__brief-info__square-info__detail-number ">
                     <h4>120,000</h4>
