comment users-menu.hbs

--- a/views/vwAdmin/users/users-menu.hbs
+++ b/views/vwAdmin/users/users-menu.hbs
@@ -35,7 +35,7 @@
             </thead>
 
             <tbody>
-                {{!-- Hàng sẽ được thêm ở đây --}}
+                {{!-- Danh sách sẽ hiển thị ở đây --}}
             </tbody>
         </table>
     </div>
