Redirect dung path

--- a/views/vwAccount/role-register.hbs
+++ b/views/vwAccount/role-register.hbs
@@ -146,7 +146,7 @@
                     </div>
                 {{/each}}
             </div>
-            <div style="color: #ED1C24" class="font-weight-bold mr-3 mt-3">Đi đến <a href="/"
+            <div style="color: #ED1C24" class="font-weight-bold mr-3 mt-3">Đi đến <a href="/editor"
                                                                                      style="text-decoration: underline">nơi
                 làm việc</a> của bạn!
             </div>
@@ -155,7 +155,7 @@
                 <img src="/others/writer.png" style=" width: 250px; height: 250px"/>
 
             </div>
-            <div style="color: #ED1C24" class="font-weight-bold mr-3 mt-3">Đi đến <a href="/"
+            <div style="color: #ED1C24" class="font-weight-bold mr-3 mt-3">Đi đến <a href="/writer"
                                                                                      style="text-decoration: underline">nơi
                 làm việc</a> của bạn!
             </div>
