--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/static/css/account-information/layout-account.css">
+    <link rel="stylesheet" href="/static/css/home-articleList/home-dropdown.css">
     {{{_sections.css}}}
 </head>
 
@@ -17,7 +18,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-light"
         style="background: linear-gradient(90.13deg, #e30e16 18.76%, #c90009 96.9%);">
+
         <div style="width: 1320px; margin: 0 auto; display: flex; align-items: center; justify-content: space-between;">
+
             <a href="/">
                 <img src="/static/images/others/logo.png" alt="" style="width: 95px">
             </a>
@@ -90,7 +93,8 @@
         </div>
     </nav>
 
-    <nav class="navbar navbar-expand navbar-light bg-light sticky-top py-1" style="background-color: #f8f9fa;">
+    <nav class="navbar navbar-expand navbar-light bg-light sticky-top py-0"
+        style="background-color: #f8f9fa; border-bottom: 2px solid #F90606">
         <div style="width: 1340px; margin: 0 auto; display: flex; align-items: center;">
             <ul class="nav navbar-nav d-flex align-items-center"
                 style="display: flex; padding: 0; margin: 0; list-style: none;">
@@ -101,25 +105,20 @@
                 </li>
 
                 {{#each this.categoryTree}}
-                <li class="nav-item active" style="margin-right: 15px;">
-                    <div class="dropdown">
-                        <a class="btn btn-secondary btn-sm dropdown-toggle" href="/cat?catId={{id}}" role="button"
-                            data-toggle="dropdown" aria-expanded="false"
-                            style="color: black; background-color: transparent; border: transparent; outline: none; box-shadow: none;">
-                            {{name}}
-                        </a>
-                        <div class="dropdown-menu">
-                            {{#each children}}
-                            <a class="dropdown-item" href="/cat?catId={{id}}">{{name}}</a>
-                            {{/each}}
-                        </div>
+                <li class="nav-item dropdown-cluster d-flex align-items-center" style="margin-right: 15px;">
+                    <a class="drop-link toggle mr-2" href="#">{{name}}</a>
+                    <div class="drop-menu">
+                        {{#each children}}
+                        <a class="drop-link drop-menu-item" href="#">{{name}}</a>
+                        {{/each}}
                     </div>
                 </li>
                 {{/each}}
-
+                
             </ul>
         </div>
     </nav>
+
 
     {{{body}}}
 
