adjust bottom border of cat nav bar

--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -94,7 +94,7 @@
     </nav>
 
     <nav class="navbar navbar-expand navbar-light bg-light sticky-top py-0"
-        style="background-color: #f8f9fa; border-bottom: 2px solid #F90606">
+        style="background-color: #f8f9fa; border-bottom: 1px solid #ebeced">
         <div style="width: 1340px; margin: 0 auto; display: flex; align-items: center;">
             <ul class="nav navbar-nav d-flex align-items-center"
                 style="display: flex; padding: 0; margin: 0; list-style: none;">
