Finish vip user in admin

--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -62,6 +62,16 @@
                 </div>
             </a>
         </div>
+
+        <div class="mt-2 px-2">
+            <a href="/admin/vip-users">
+                <div class="dash-board__section {{#if vipUsers}}active{{/if}} d-flex align-items-center">
+                    <img src="/others/medal.png" class="mr-2" width="25px" height="25px">
+                    <div class="w-100 ">Người dùng VIP</div>
+                </div>
+            </a>
+        </div>
+
         <div class="mt-2 px-2">
             <a href="/admin/role-registers">
                 <div class="dash-board__section {{#if role}}active{{/if}} d-flex align-items-center">
