--- a/views/vwAdmin/categories/categories-menu.hbs
+++ b/views/vwAdmin/categories/categories-menu.hbs
@@ -18,7 +18,7 @@
 <div class="bg-white shadow px-4 pt-3 pb-5 position-relative" style="border-radius: 10px;min-height: 797px ">
     <div class="d-flex justify-content-between">
         <h3>Danh sách chuyên mục </h3>
-        <a class="btn btn-outline-success font-weight-bold d-flex align-items-center" href="/admin/categories/add">
+        <a class="btn btn-outline-danger font-weight-bold d-flex align-items-center" href="/admin/categories/add">
             <i class="bi bi-plus-square-fill mr-1"></i>
             <span>
             Thêm chuyên mục
